labwork/2026-05-15-Kubernetes/kubernetes-ingress/03-kubernetes-ingress-https/https_retail_store_k8s_manifests-vpw/06_ingress/01_ingress_https_instance_mode-vpw.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-https-instance-mode-vpw
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: vpw-store-https-instance-mode
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness    
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:454143665149:certificate/56a801e9-e421-4d54-a0aa-5ef9f3a4a1e7
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/subnets: subnet-014ab62fcab251723,subnet-0fe1053326b4e263e
spec:
  ingressClassName: alb 
  defaultBackend:
    service:
      name: ui-np-vpw
      port:
        number: 80
